src/style/dashboard.css
#root{
  display: flex;
  flex-direction: row;
  min-width: 100vw;
  min-height: 100vh;
  overflow-x: hidden;
}

@media (max-width: 600px){
  #root{
    flex-direction: column;
  }
  aside.sidebar{
    width: 100%;
    max-width: 100vw;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding-bottom: 10px;
    padding: 5px 0;

    :first-child{
      margin-top: 0;
    }
    button{
      width: fit-content;
      padding: 5px 15px;
    }
  }
}

.sidebar{
  width: 30%;
  max-width: 700px;
  background: var(--primaryColor);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 5px;
  :first-child{
    margin-top: 20px;
  }
  button {
    border-radius: 5px;
    width: 80%;
    color: var(--secondaryColor);
    background: var(--primaryColor);
    display: flex;
    justify-content: left;
    padding-left: 5px;
    font-weight: 500;
    font-size: 20px;
  }
  button:not(.active):hover{
    background: var(--primaryColorHover);
  }
  button.active{
    background: var(--secondaryColor);
    color: var(--primaryColor);
  }
}

main{
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10px 30px;
  background: var(--secondaryColor);
}

